package com.interfaz.demo.model;

public interface Aprobador {
    void aprobarSolicitud(String codigoSolicitud);
}