package com.interfaz.demo.model;

public interface Autenticable {
    boolean login(String usuario, String password);
}