package com.interfaz.demo.model;

public interface Evaluador {
    void evaluarEstudiante(Estudiante estudiante, double nota);
}
