package com.interfaz.demo.model;

public interface Notificable {
    void enviarNotificacion(String mensaje);
}
